# videoproc

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  VideoCap  test.cpp
include/: Algorithms.h  CamFilter.h  Camera.h  CircleDetector.h  CornerDetector.h  FlagParser.h  Frame.h  VideoStitcher.h  View.h
src/: Algorithms.cpp  CMakeLists.txt  CamFilter.cpp  CamFilter.h  Camera.cpp  Camera.h  CircleDetector.cpp  CornerDetector.cpp  CornerDetector.h  FlagParser.cpp  Frame.cpp  Frame.h  Recorder.cpp  Recorder.h  Video.cpp  Video.h  VideoStitcher.cpp  VideoStitcher.h  View.cpp  Viewer.h  main.cpp  test.cpp
src/gui/: AlgorithmSelector.cpp  CMakeLists.txt  CameraUI.cpp  MainWindow.cpp  MainWindow.h  MatView.cpp  MatView.h  RealtimeUI.cpp  RealtimeViewer.cpp  RealtimeViewer.h  RecorderUI.cpp  RecorderViewer.cpp  main.cpp
src/gui/include/: AlgorithmSelector.h  CameraUI.h  MainWindow.h  MatView.h  RealtimeUI.h  RealtimeViewer.h  RecorderUI.h  RecorderViewer.h
src/parallel/: AsyncRecorder.cpp  AsyncRecorder.h  CMakeLists.txt  FQueue.h  PRunner.cpp  PRunner.h  ThreadPool.cpp  ThreadPool.h  WorkerThread.h
test/: CMakeLists.txt  TestSet.cpp  TestSet.h  frame  test_Frame.cpp
test/parallel/: CMakeLists.txt  test_PRunner.cpp  test_ThreadPool.cpp
