cmake_minimum_required(VERSION 2.8)
project( videocap )
find_package( OpenCV REQUIRED )
find_package( Qt4 REQUIRED )

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,-R,/opt/gcc/lib64")
SET(CMAKE_CXX_COMPILER "clang++")
IF("${CMAKE_CXX_COMPILER}" STREQUAL "clang++")
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
        SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Werror -Wno-deprecated-register -Wno-uninitialized -O3 -stdlib=libstdc++ -pthread")
    ELSE()
        SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Werror -Wno-deprecated-register -Wno-uninitialized -stdlib=libstdc++ -pthread -DDEBUG -fcolor-diagnostics")
    ENDIF()
ELSE()
    SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall -O3")
ENDIF()

add_subdirectory (src)
add_subdirectory (test)
